<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical">


        <ImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/loginlogo"
            android:adjustViewBounds="true"
            android:layout_marginBottom="-40dp"
            android:layout_gravity="center_horizontal"
            />


        <EditText
            android:id="@+id/usernameEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:hint="@string/user_name"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="text"
            android:drawableLeft="@drawable/username"
            android:drawablePadding="16dp"
            />


        <EditText
            android:id="@+id/passEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="24dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:hint="@string/password"
            android:textColorHint="@color/white"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginTop="32dp"/>


        <Button
            android:id="@+id/loginbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:background="@drawable/button_background"
            android:text="@string/login"
            android:textColor="@color/white"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Or Sign Up with"
            android:layout_marginBottom="8dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="16dp">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:background="@drawable/sendotpbackground">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Send Otp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:layout_gravity="center"/>

            </LinearLayout>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginRight="8dp"
                android:src="@drawable/googlelogin"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/facebooklogin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New User?"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/register_usertxt"
                android:layout_height="wrap_content"
                android:text=" Register Now"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="sans-serif"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    </LinearLayout>

    </androidx.core.widget.NestedScrollView>


    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:indeterminateDrawable="@drawable/progressbar_background"/>



</RelativeLayout>